--- a/code/card_task_01.css
+++ b/code/card_task_01.css
@@ -3,7 +3,7 @@ img {
 }
 
 body {
-  background-color: rgba(127, 127, 127, 1);
+  background-color: lightgray;
   font-family: Helvetica, Arial, sans-serif;
 }
 
